Skip sanitizing DB

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,12 +203,12 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             sleep 30s
             # Sanitize DB
-            if [[ $CIRCLE_BRANCH = "master" ]]; then
-              echo "Deploying Master to DEV. Do not sanitize DB"
-            else
-              echo "Sanitize DB"
-              terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
-            fi
+            # if [[ $CIRCLE_BRANCH = "master" ]]; then
+            #   echo "Deploying Master to DEV. Do not sanitize DB"
+            # else
+            #   echo "Sanitize DB"
+            #   terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
+            # fi
             # Clear cache
             # terminus drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
