POWR-125 added shs and chosen modules and libraries, added Topics field to Program group type, configured City Service, Bureau/Office and Program types to use chosen for Topics field

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/bootstrap": "^3.9",
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_paragraphs": "^2.0@beta",
+        "drupal/chosen": "^2.5",
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
@@ -51,6 +52,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/shs": "^1.0@alpha",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
