--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -5,14 +5,18 @@ dependencies:
   config:
     - field.field.group.program.field_official_organization_name
     - field.field.group.program.field_shortname_or_acronym
+    - field.field.group.program.field_topics
     - group.type.program
+  module:
+    - path
+    - shs_chosen
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
   field_official_organization_name:
-    weight: 1
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -20,12 +24,29 @@ content:
     type: string_textfield
     region: content
   field_shortname_or_acronym:
-    weight: 2
+    weight: 4
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_topics:
+    weight: 2
+    settings:
+      chosen_override: false
+      chosen_settings:
+        disable_search: false
+        search_contains: false
+        placeholder_text_multiple: 'Choose some options'
+        placeholder_text_single: 'Choose an option'
+        no_results_text: 'No results match'
+      display_node_count: false
+      create_new_items: false
+      create_new_levels: false
+      force_deepest: false
+    third_party_settings: {  }
+    type: options_shs_chosen
     region: content
   label:
     type: string_textfield
@@ -35,6 +56,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  path:
+    type: path
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
-  path: true
   uid: true
