--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - datetime
     - paragraphs
     - path
+    - shs_chosen
 id: node.city_service.default
 targetEntityType: node
 bundle: city_service
@@ -43,9 +44,20 @@ content:
     region: content
   field_topics:
     weight: 2
-    settings: {  }
+    settings:
+      chosen_settings:
+        placeholder_text_multiple: 'Choose some options'
+        placeholder_text_single: 'Choose an option'
+        no_results_text: 'No results match'
+        disable_search: 0
+        search_contains: 0
+      create_new_items: false
+      create_new_levels: false
+      force_deepest: 0
+      chosen_override: 0
+      display_node_count: false
     third_party_settings: {  }
-    type: options_buttons
+    type: options_shs_chosen
     region: content
   moderation_state:
     type: moderation_state_default
@@ -102,5 +114,10 @@ content:
       size: 60
       placeholder: ''
     region: content
+    third_party_settings: {  }
+  url_redirects:
+    weight: 50
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
