--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -5,12 +5,21 @@ dependencies:
   config:
     - field.field.group.program.field_official_organization_name
     - field.field.group.program.field_shortname_or_acronym
+    - field.field.group.program.field_topics
     - group.type.program
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_topics:
+    weight: 1
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   label:
     label: hidden
     type: string
