--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -6,6 +6,9 @@ module:
   block: 0
   block_content: 0
   breakpoint: 0
+  chosen: 0
+  chosen_field: 0
+  chosen_lib: 0
   ckeditor: 0
   components: 0
   config: 0
@@ -86,6 +89,8 @@ module:
   search_api_db: 0
   serialization: 0
   shortcut: 0
+  shs: 0
+  shs_chosen: 0
   simple_oauth: 0
   simple_oauth_extras: 0
   system: 0
