A simple start for Particle theme with basic config changes.

--- a/web/sites/default/config/block.block.groupoperations_2.yml
+++ b/web/sites/default/config/block.block.groupoperations_2.yml
@@ -9,8 +9,8 @@ dependencies:
     - particle
 id: groupoperations_2
 theme: particle
-region: sidebar_first
-weight: -6
+region: sidebar_second
+weight: -7
 provider: null
 plugin: group_operations
 settings:
