--- a/web/sites/default/config/block.block.particle_sitebranding.yml
+++ b/web/sites/default/config/block.block.particle_sitebranding.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: hq6eWC-TFBaAigtdsfnuVzZ0dmj6Sqp_faD6gFJgCs8
 id: particle_sitebranding
 theme: particle
-region: primary_menu
+region: header_branding
 weight: -6
 provider: null
 plugin: system_branding_block
@@ -22,4 +22,9 @@ settings:
   use_site_logo: false
   use_site_name: true
   use_site_slogan: false
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: false
+    context_mapping: {  }
