--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -27,10 +27,10 @@ variant_settings:
       context_mapping: {  }
     a9d59952-4724-44eb-be56-8b0f734491d0:
       id: 'views_block:topics-block_1'
-      label: ''
+      label: 'Services and information by topic'
       provider: views
-      label_display: '0'
-      views_label: ''
+      label_display: visible
+      views_label: 'Services and information by topic'
       items_per_page: none
       region: content
       weight: 0
