--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -53,18 +53,21 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: grid
+        type: html_list
         options:
           grouping: {  }
-          columns: 4
-          automatic_width: true
-          alignment: horizontal
-          col_class_default: true
-          col_class_custom: ''
-          row_class_default: true
-          row_class_custom: ''
+          row_class: nav-item
+          default_row_class: false
+          type: ul
+          wrapper_class: ''
+          class: 'nav nav-pills nav-fill'
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
         name:
           id: name
@@ -78,7 +81,7 @@ display:
           alter:
             alter_text: false
             text: ''
-            make_link: false
+            make_link: true
             path: ''
             absolute: false
             external: false
@@ -87,7 +90,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: ''
+            link_class: nav-link
             prefix: ''
             suffix: ''
             target: ''
@@ -103,13 +106,13 @@ display:
             preserve_tags: ''
             html: false
           element_type: h2
-          element_class: text-center
+          element_class: ''
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -164,6 +167,7 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
