--- a/web/sites/default/config/block.block.exposedformsearchpage.yml
+++ b/web/sites/default/config/block.block.exposedformsearchpage.yml
@@ -1,4 +1,4 @@
-uuid: 79816571-120f-4645-9dec-7df822a969d6
+uuid: bec1b8da-f2de-4f3d-9866-2b3a28754c27
 langcode: en
 status: true
 dependencies:
@@ -9,23 +9,21 @@ dependencies:
     - views
   theme:
     - particle
-_core:
-  default_config_hash: O_TO0wMa9cxvSyU0diXdjlfghnbrDS_cMTLPF4KY8RA
-id: particle_views_search
+id: exposedformsearchpage
 theme: particle
-region: primary_menu
-weight: -5
+region: header_branding
+weight: 0
 provider: null
 plugin: 'views_exposed_filter_block:search-page'
 settings:
   id: 'views_exposed_filter_block:search-page'
   label: ''
   provider: views
-  label_display: '0'
-  views_label: visible
+  label_display: visible
+  views_label: ''
 visibility:
   request_path:
     id: request_path
     pages: '<front>'
-    negate: true
+    negate: false
     context_mapping: {  }
