--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -53,18 +53,20 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: html_list
+        type: grid
         options:
           grouping: {  }
-          row_class: 'list-group-item list-group-item-primary'
-          default_row_class: false
-          type: ul
-          wrapper_class: item-list
-          class: list-group
+          columns: 3
+          automatic_width: false
+          alignment: horizontal
+          col_class_default: false
+          col_class_custom: 'card text-center align-middle'
+          row_class_default: false
+          row_class_custom: card-group
       row:
         type: fields
         options:
-          default_field_elements: true
+          default_field_elements: false
           inline: {  }
           separator: ''
           hide_empty: false
@@ -133,7 +135,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="d-flex text-center"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}"><h3 class="m-0 align-middle p-4">{{ name }}</h3></a>'
             make_link: false
             path: ''
             absolute: false
