Small change to trigger a build.

--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -60,7 +60,7 @@ display:
           automatic_width: false
           alignment: horizontal
           col_class_default: false
-          col_class_custom: 'card text-center align-middle'
+          col_class_custom: 'card text-center align-items-center'
           row_class_default: false
           row_class_custom: card-group
       row:
