Kevin test merge pull request #1234 from eGovPDX/powr-162

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,7 +207,10 @@ behat_tests: &behat_tests
             # Clear cache
             # terminus drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
-            terminus drush portlandor.$CIRCLE_BRANCH -- cim -y             
+            terminus drush portlandor.$CIRCLE_BRANCH -- cim -y
+            if [[ $(git log --pretty=format:%s -1) =~ (^Kevin test merge pull request #[0-9]* from eGovPDX\/)([^,]*) ]]; then 
+              echo "Test - Found a Pull Request Merge for branch: '${BASH_REMATCH[2]}'";
+            fi        
           fi
     - save_cache: *save_cache
     - store_test_results:
