--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -12,12 +12,14 @@ audience: member
 group_type: bureau_office
 permissions_ui: true
 permissions:
-  1: 'view group'
-  2: 'leave group'
-  3: 'access group_node overview'
-  4: 'create group_node:city_service entity'
-  5: 'delete own group_node:city_service entity'
-  6: 'update any group_node:city_service entity'
-  7: 'update own group_node:city_service entity'
-  8: 'view group_node:city_service entity'
-  9: 'view unpublished group_node:city_service entity'
+  - 'view group'
+  - 'leave group'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'edit group'
