--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -12,12 +12,13 @@ audience: member
 group_type: program
 permissions_ui: true
 permissions:
-  - 'view group'
-  - 'leave group'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
+  0: 'view group'
+  1: 'leave group'
+  2: 'access group_node overview'
+  3: 'create group_node:city_service entity'
+  4: 'delete own group_node:city_service entity'
+  5: 'update any group_node:city_service entity'
+  6: 'update own group_node:city_service entity'
+  7: 'view group_node:city_service entity'
+  8: 'view unpublished group_node:city_service entity'
+  13: 'delete any group_node:city_service entity'
