POWR-125 Added Audience vocabulary, added Audience and Topics fields.

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/bootstrap": "^3.9",
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_paragraphs": "^2.0@beta",
+        "drupal/chosen": "^2.5",
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
