--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
@@ -13,6 +14,14 @@ targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_audience:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_summary:
     type: string
     weight: 2
