--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -109,3 +109,6 @@ views_bulk_operations: 2.2.0
 page_manager: 0.0.0
 page_manager_ui: 0.0.0
 subpathauto: 1.0.0-beta1
+chosen_lib: 2.5.0
+chosen: 2.5.0
+chosen_field: 0.0.0
