POWR-51 Tweak program group permissions some more

--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -12,21 +12,21 @@ audience: member
 group_type: program
 permissions_ui: true
 permissions:
-  0: 'access content overview'
-  1: 'administer group'
-  3: 'edit group'
-  4: 'view group'
-  5: 'administer members'
-  6: 'update own group_membership content'
-  7: 'leave group'
-  8: 'view group_membership content'
-  9: 'access group_node overview'
-  10: 'create group_node:city_service entity'
-  11: 'delete any group_node:city_service entity'
-  12: 'delete own group_node:city_service entity'
-  13: 'update any group_node:city_service entity'
-  14: 'update own group_node:city_service entity'
-  15: 'view group_node:city_service entity'
-  16: 'view unpublished group_node:city_service entity'
-  17: 'create group_node:city_service content'
-  18: 'view group_node:city_service content'
+  - 'access content overview'
+  - 'administer group'
+  - 'edit group'
+  - 'view group'
+  - 'administer members'
+  - 'update own group_membership content'
+  - 'leave group'
+  - 'view group_membership content'
+  - 'access group_node overview'
+  - 'create group_node:city_service entity'
+  - 'delete any group_node:city_service entity'
+  - 'delete own group_node:city_service entity'
+  - 'update any group_node:city_service entity'
+  - 'update own group_node:city_service entity'
+  - 'view group_node:city_service entity'
+  - 'view unpublished group_node:city_service entity'
+  - 'create group_node:city_service content'
+  - 'view group_node:city_service content'
