POWR-125 updated form display in Program group type to use checkboxes for Audience and Chosen for Topics

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -8,6 +8,8 @@ dependencies:
     - field.field.group.program.field_shortname_or_acronym
     - field.field.group.program.field_topics
     - group.type.program
+  module:
+    - chosen_field
 id: group.program.default
 targetEntityType: group
 bundle: program
@@ -15,12 +17,9 @@ mode: default
 content:
   field_audience:
     weight: 3
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_buttons
     region: content
   field_official_organization_name:
     weight: 1
@@ -40,12 +39,9 @@ content:
     region: content
   field_topics:
     weight: 4
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   label:
     type: string_textfield
