--- a/web/themes/custom/particle/package.json
+++ b/web/themes/custom/particle/package.json
@@ -51,6 +51,7 @@
     "holderjs": "^2.9.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "npm": "^6.0.0",
     "popper.js": "^1.14.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
