POWR-125 added chosen libaries, configured content and group types to use chosen.

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -3,16 +3,25 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_shortname_or_acronym
     - field.field.group.bureau_office.field_summary
     - field.field.group.bureau_office.field_topics
     - group.type.bureau_office
+  module:
+    - chosen_field
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_audience:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_official_organization_name:
     weight: 1
     settings:
@@ -30,7 +39,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 4
+    weight: 5
     settings:
       rows: 5
       placeholder: ''
@@ -38,13 +47,10 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 3
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    weight: 4
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   label:
     type: string_textfield
