--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_service_mode
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
+    - chosen_field
     - content_moderation
     - datetime
     - paragraphs
@@ -23,15 +25,21 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_audience:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_community_actions:
     weight: 1
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
+    type: chosen_select
     region: content
   field_service_mode:
     type: entity_reference_paragraphs
-    weight: 26
+    weight: 12
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -42,10 +50,10 @@ content:
     third_party_settings: {  }
     region: content
   field_topics:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
+    type: chosen_select
     region: content
   moderation_state:
     type: moderation_state_default
@@ -102,5 +110,10 @@ content:
       size: 60
       placeholder: ''
     region: content
+    third_party_settings: {  }
+  url_redirects:
+    weight: 13
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden: {  }
