--- a/web/sites/default/config/chosen.settings.yml
+++ b/web/sites/default/config/chosen.settings.yml
@@ -1,15 +1,20 @@
-minimum_single: 20
-minimum_multiple: 20
+minimum_single: 0
+minimum_multiple: 0
 disable_search_threshold: 0
 minimum_width: 0
 jquery_selector: 'select:visible'
 search_contains: false
-disable_search: false
+disable_search: true
 allow_single_deselect: false
 placeholder_text_multiple: 'Choose some options'
 placeholder_text_single: 'Choose an option'
 no_results_text: 'No results match'
-disabled_themes: {  }
+disabled_themes:
+  seven: '0'
+  adminimal_theme: '0'
+  bootstrap: '0'
+  particle: '0'
+  portlandor: '0'
 chosen_include: 2
 _core:
   default_config_hash: JUHKHJeHl1bWXY41HMIcDR-VmAWvJ4OJycDubCkIeDU
