--- a/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_mode.default.yml
@@ -3,26 +3,28 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.service_mode.field_service_mode_list
+    - field.field.paragraph.service_mode.field_service_modes
+    - field.field.paragraph.service_mode.field_step
     - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
   module:
+    - chosen_field
     - paragraphs
 id: paragraph.service_mode.default
 targetEntityType: paragraph
 bundle: service_mode
 mode: default
 content:
-  field_service_mode_list:
+  field_service_modes:
     weight: 0
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: chosen_select
     region: content
   field_step_by_step_instructions:
     type: entity_reference_paragraphs
-    weight: 3
+    weight: 2
     settings:
       title: Paragraph
       title_plural: Paragraphs
