--- a/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
@@ -3,29 +3,29 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.service_mode.field_service_mode_list
+    - field.field.paragraph.service_mode.field_service_modes
     - field.field.paragraph.service_mode.field_step
     - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
   module:
     - entity_reference_revisions
-    - options
 id: paragraph.service_mode.default
 targetEntityType: paragraph
 bundle: service_mode
 mode: default
 content:
-  field_service_mode_list:
+  field_service_modes:
     weight: 0
     label: hidden
-    settings: {  }
+    settings:
+      link: true
     third_party_settings: {  }
-    type: list_default
+    type: entity_reference_label
     region: content
   field_step_by_step_instructions:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       view_mode: default
