--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "drupal/adminimal_admin_toolbar": "^1.5",
         "drupal/adminimal_theme": "^1.3",
         "drupal/bootstrap": "^3.9",
+        "drupal/bootstrap_barrio": "^4.9",
         "drupal/bootstrap_layouts": "^5.1",
+        "drupal/bootstrap_library": "^1.11",
         "drupal/bootstrap_paragraphs": "^2.0@beta",
         "drupal/chosen": "^2.5",
         "drupal/components": "^1.0",
