--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
        }
     },
     "require": {
-        "acquia/lightning": "~3.1.0",
+        "acquia/lightning": "^3.1",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
