--- a/web/themes/custom/powr/package.json
+++ b/web/themes/custom/powr/package.json
@@ -15,7 +15,8 @@
   "author": "@hatuhay",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "npm": "^6.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
