POWR-96 compose file changes to debug.

--- a/web/themes/custom/stormy/config/install/stormy.settings.yml
+++ b/web/themes/custom/stormy/config/install/stormy.settings.yml
@@ -25,4 +25,4 @@ stormy_navbar_top_color: 'navbar-dark'
 stormy_navbar_top_background: 'bg-dark'
 stormy_navbar_position: ''
 stormy_navbar_color: 'navbar-dark'
-stormy_navbar_background: 'bg-primary'
+stormy_navbar_background: 'bg-dark'
