POWR-96 place the branding and menu in a dark navbar.

--- a/web/sites/default/config/block.block.stormy_main_menu.yml
+++ b/web/sites/default/config/block.block.stormy_main_menu.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: GT_zYl7I9VAILH8OxMRe-VDvFadCDHxRcnmBc5xEmf0
 id: stormy_main_menu
 theme: stormy
-region: primary_menu
+region: header_form
 weight: -5
 provider: null
 plugin: 'system_menu_block:main'
