--- a/web/sites/default/config/stormy.settings.yml
+++ b/web/sites/default/config/stormy.settings.yml
@@ -42,18 +42,18 @@ bootstrap_barrio_button_outline: 0
 bootstrap_barrio_button_size: ''
 bootstrap_barrio_navbar_container: 0
 bootstrap_barrio_navbar_toggle: navbar-toggleable-lg
-bootstrap_barrio_navbar_top_navbar: 0
+bootstrap_barrio_navbar_top_navbar: 1
 bootstrap_barrio_navbar_top_position: ''
 bootstrap_barrio_navbar_top_color: navbar-dark
 bootstrap_barrio_navbar_top_background: bg-dark
 bootstrap_barrio_navbar_position: ''
-bootstrap_barrio_navbar_color: navbar-light
-bootstrap_barrio_navbar_background: ''
+bootstrap_barrio_navbar_color: navbar-dark
+bootstrap_barrio_navbar_background: bg-dark
 bootstrap_barrio_navbar_top_affix: 0
 bootstrap_barrio_navbar_affix: 0
 bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
-bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: ''
+bootstrap_barrio_google_fonts: monserrat_lato
+bootstrap_barrio_icons: material_design_icons
 bootstrap_barrio_system_messages: messages_dark
