POWR-96 fix up the homepage and list views.

--- a/web/sites/default/config/views.view.bureaus_offices_list.yml
+++ b/web/sites/default/config/views.view.bureaus_offices_list.yml
@@ -65,7 +65,14 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: default
+        type: html_list
+        options:
+          grouping: {  }
+          row_class: list-group-item
+          default_row_class: false
+          type: ul
+          wrapper_class: 'container col-12'
+          class: list-group
       row:
         type: fields
       fields:
