--- a/web/sites/default/config/views.view.services.yml
+++ b/web/sites/default/config/views.view.services.yml
@@ -67,7 +67,14 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: default
+        type: html_list
+        options:
+          grouping: {  }
+          row_class: list-group-item
+          default_row_class: false
+          type: ul
+          wrapper_class: container
+          class: 'list-group col-12'
       row:
         type: fields
       fields:
