--- a/web/sites/default/config/page_manager.page_variant.group_view-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.group_view-panels_variant-0.yml
@@ -49,7 +49,7 @@ variant_settings:
   weight: 0
   layout: layout_twocol
   layout_settings: {  }
-  page_title: ''
+  page_title: '[group:title]'
   storage_type: page_manager
   storage_id: group_view-panels_variant-0
   builder: standard
