POWR-96 add back in the bootstrap theme to make the build work.

--- a/web/sites/default/config/block.block.bootstrap_breadcrumbs.yml
+++ b/web/sites/default/config/block.block.bootstrap_breadcrumbs.yml
@@ -1,17 +1,17 @@
-uuid: 01992522-229e-4ef8-9b46-53b426d646cb
+uuid: ccb028a9-cbf6-4889-af82-077c9c110330
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - stormy
+    - bootstrap
 _core:
   default_config_hash: wDR9JKEATSWldBjw8du8s3G2zjEYeQf88nlld11hMLo
-id: stormy_breadcrumbs
-theme: stormy
-region: breadcrumb
-weight: -5
+id: bootstrap_breadcrumbs
+theme: bootstrap
+region: header
+weight: -100
 provider: null
 plugin: system_breadcrumb_block
 settings:
