--- a/web/sites/default/config/block.block.bootstrap_local_tasks.yml
+++ b/web/sites/default/config/block.block.bootstrap_local_tasks.yml
@@ -1,15 +1,15 @@
-uuid: 94638e03-d598-422f-8836-d4aba60e0074
+uuid: 20ac3c03-c2c7-42a2-b4ca-6174fb204921
 langcode: en
 status: true
 dependencies:
   theme:
-    - stormy
+    - bootstrap
 _core:
   default_config_hash: qHdtze2DZ2mFfaJadxjZz6epm92_SN9SAFY4yJGl8Fo
-id: stormy_local_tasks
-theme: stormy
-region: content
-weight: -4
+id: bootstrap_local_tasks
+theme: bootstrap
+region: header
+weight: 10
 provider: null
 plugin: local_tasks_block
 settings:
