--- a/web/sites/default/config/block.block.bootstrap_page_title.yml
+++ b/web/sites/default/config/block.block.bootstrap_page_title.yml
@@ -1,15 +1,15 @@
-uuid: 1f1438d5-f687-46fb-9544-3e0f68470dec
+uuid: 583ab2e0-6efc-4435-9a42-6ed42d04baf2
 langcode: en
 status: true
 dependencies:
   theme:
-    - stormy
+    - bootstrap
 _core:
   default_config_hash: 1TQP4b3ZnlzvIH9bj6cpCz_SyUHdJjLQkZnHpikjjhw
-id: stormy_page_title
-theme: stormy
-region: content
-weight: -3
+id: bootstrap_page_title
+theme: bootstrap
+region: header
+weight: 0
 provider: null
 plugin: page_title_block
 settings:
