--- a/web/sites/default/config/block.block.bootstrap_content.yml
+++ b/web/sites/default/config/block.block.bootstrap_content.yml
@@ -1,17 +1,17 @@
-uuid: 57702287-fcc4-49ab-b13a-ac455b236aed
+uuid: 933844d4-aaba-4ca9-af9c-d3d3786605f8
 langcode: en
 status: true
 dependencies:
   module:
     - system
   theme:
-    - stormy
+    - bootstrap
 _core:
   default_config_hash: fNNLN48MSGSLiqwIFywCuxH2Dk_IxDbaP0kYhg_IPrg
-id: stormy_content
-theme: stormy
+id: bootstrap_content
+theme: bootstrap
 region: content
-weight: -1
+weight: 0
 provider: null
 plugin: system_main_block
 settings:
