--- a/web/sites/default/config/block.block.bootstrap_local_actions.yml
+++ b/web/sites/default/config/block.block.bootstrap_local_actions.yml
@@ -1,15 +1,15 @@
-uuid: 19079031-b700-4e12-997c-c8be1238bbcf
+uuid: 33c12f51-bb57-4fde-bf0f-37f46ffb1cfd
 langcode: en
 status: true
 dependencies:
   theme:
-    - stormy
+    - bootstrap
 _core:
   default_config_hash: ffxthelqQF8xcr4GTG4HlaNNsluiHftN0pujmQpW0bQ
-id: stormy_local_actions
-theme: stormy
-region: content
-weight: -5
+id: bootstrap_local_actions
+theme: bootstrap
+region: header
+weight: 20
 provider: null
 plugin: local_actions_block
 settings:
