POWR-135 Added ckwordcount in composer

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/bootstrap_library": "^1.11",
         "drupal/bootstrap_paragraphs": "^2.0@beta",
         "drupal/chosen": "^2.5",
+        "drupal/ckwordcount": "^1.0",
         "drupal/components": "^1.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5",
