POWR-135 Enabled ckwordcount module

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -11,6 +11,7 @@ module:
   chosen_field: 0
   chosen_lib: 0
   ckeditor: 0
+  ckwordcount: 0
   components: 0
   config: 0
   consumers: 0
@@ -69,6 +70,7 @@ module:
   menu_ui: 0
   metatag: 0
   node: 0
+  notification: 0
   openapi: 0
   openapi_redoc: 0
   options: 0
