POWR-135 Applied word count settings to simplified editor

--- a/web/sites/default/config/editor.editor.simple_editor.yml
+++ b/web/sites/default/config/editor.editor.simple_editor.yml
@@ -35,10 +35,19 @@ settings:
           items:
             - HorizontalRule
   plugins:
-    stylescombo:
-      styles: ''
     language:
       language_list: un
+    stylescombo:
+      styles: ''
+    wordcount:
+      enable: 1
+      show_paragraphs: 0
+      show_word_count: 0
+      show_char_count: 1
+      count_spaces: 1
+      count_html: 0
+      max_words: '-1'
+      max_chars: '-1'
 image_upload:
   status: false
   scheme: public
