POWR-145 Switched view to use attachments from existing views

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
+        "drupal/views_field_view": "^1.0@beta",
         "drush/drush": "^8.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
