POWR-38 Config taxonomy term pages for topics, community actions, and audiences

--- a/web/sites/default/config/views.view.taxonomy_term.yml
+++ b/web/sites/default/config/views.view.taxonomy_term.yml
@@ -1,6 +1,6 @@
 uuid: 22ee97ba-7604-4cbf-8284-2384d7c1ab8a
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
