POWR-78 tabs and steps part one.

--- a/composer.json
+++ b/composer.json
@@ -103,14 +103,10 @@
         "enable-patching": true,
         "patches": {
           "drupal/core": {
-            "2699157 - Plugin Lazy loading can cause usort warning":
-              "https://www.drupal.org/files/issues/2699157-23.drupal.Plugin-Lazy-loading-can-cause-usort-warning.patch",
-            "2759397 - Patch EntityReferenceItemNormalizer to prevent recursion":
-              "https://www.drupal.org/files/issues/2759397-1-entity_reference_recursion.patch",
-            "2679775 - Fixes float issue with inline label fields (entity references on most cases).":
-              "https://www.drupal.org/files/issues/2679775-11-inline-labels.patch",
-            "2788777 - Allow a profile to be installed from existing config":
-              "https://www.drupal.org/files/issues/2788777-91.patch"
+              "Telephone Link field formatter breaks Drupal with 5 digits or less in the number": "https://www.drupal.org/files/issues/2484693-47.patch",
+              "Database::startLog() cause a notice in Shortcut::sort()": "https://www.drupal.org/files/issues/2567035-surpress-uasort-contents-modified-errors-20.patch"          },
+          "drupal/ctools": {
+              "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
           },
           "drupal/group": {
             "2774827 - node:group functionality for adding node:group:title":
