POWR-170 updated configs to get xdebug working.

--- a/.lando.yml
+++ b/.lando.yml
@@ -8,6 +8,9 @@ framework: drupal8
 xdebug: true
 services:
   appserver:
+    xdebug: true
+    config:
+      conf: xdebug.ini
     build:
       - mkdir -p ~/.terminus/plugins
       - composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-composer-plugin:~1
