--- a/web/sites/default/config/views.view.topics.yml
+++ b/web/sites/default/config/views.view.topics.yml
@@ -53,20 +53,18 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: grid
+        type: html_list
         options:
           grouping: {  }
-          columns: 3
-          automatic_width: false
-          alignment: horizontal
-          col_class_default: false
-          col_class_custom: 'card align-items-center d-flex justify-content-center'
-          row_class_default: false
-          row_class_custom: 'card-group text-center'
+          row_class: 'list-group-item list-group-item-primary'
+          default_row_class: false
+          type: ul
+          wrapper_class: item-list
+          class: list-group
       row:
         type: fields
         options:
-          default_field_elements: false
+          default_field_elements: true
           inline: {  }
           separator: ''
           hide_empty: false
@@ -114,7 +112,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: false
+          element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -135,7 +133,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="{{ view_taxonomy_term }}" class="card-title p-3 m-0"><h3>{{ name }}</h3></a>'
+            text: '<a href="{{ view_taxonomy_term }}" class="d-flex text-center"><h3>{{ name }}</h3></a>'
             make_link: false
             path: ''
             absolute: false
