--- a/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.form_app_button.default.yml
@@ -19,7 +19,7 @@ content:
       placeholder_title: ''
       link_class_mode: select_class
       link_class_force: ''
-      link_class_select: "btn btn-secondary btn--complete|Complete button\nbtn btn-secondary btn--download|Download button\nbtn btn-secondary btn--directions|Directions button"
+      link_class_select: "btn btn-secondary btn--form|Form button\r\nbtn btn-secondary btn--download|Download button"
     third_party_settings: {  }
     type: link_class_field_widget
     region: content
