--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -16,7 +16,7 @@ mode: default
 content:
   field_audience:
     weight: 3
-    label: inline
+    label: above
     settings:
       link: true
     third_party_settings: {  }
@@ -24,15 +24,15 @@ content:
     region: content
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_topics:
-    weight: 2
-    label: inline
+    weight: 1
+    label: above
     settings:
       link: true
     third_party_settings: {  }
