--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -15,7 +15,7 @@ mode: default
 content:
   field_audience:
     weight: 1
-    label: inline
+    label: above
     settings:
       link: true
     third_party_settings: {  }
@@ -23,7 +23,7 @@ content:
     region: content
   field_topics:
     weight: 2
-    label: inline
+    label: above
     settings:
       link: true
     third_party_settings: {  }
