--- a/web/sites/default/config/stormy.settings.yml
+++ b/web/sites/default/config/stormy.settings.yml
@@ -55,5 +55,5 @@ bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: monserrat_lato
-bootstrap_barrio_icons: material_design_icons
+bootstrap_barrio_icons: fontawesome
 bootstrap_barrio_system_messages: messages_dark
