POWR-165 change Nodes tab to Content in view config

--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -887,7 +887,7 @@ display:
             title_enable: false
             title: All
           title_enable: true
-          title: '{{ arguments.gid|placeholder }} nodes'
+          title: '{{ arguments.gid|placeholder }} content'
           default_argument_type: group_id_from_url
           default_argument_options: {  }
           default_argument_skip_url: false
@@ -911,7 +911,7 @@ display:
           entity_field: gid
           plugin_id: numeric
       display_extenders: {  }
-      title: Nodes
+      title: Content
     cache_metadata:
       max-age: -1
       contexts:
@@ -933,14 +933,13 @@ display:
       path: group/%group/nodes
       menu:
         type: tab
-        title: Nodes
+        title: Content
         description: ''
         expanded: false
         parent: ''
         weight: 25
         context: '0'
         menu_name: main
-        enabled: true
     cache_metadata:
       max-age: -1
       contexts:
